using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constant : MonoBehaviour
{
    public const string ANIM_RUN = "Run";
    public const string ANIM_IDLE = "Idle";
    public const string ANIM_FALL = "Fall";

    public const string TAG_BRICK = "Brick";

    public const string LAYER_GROUND = "Ground";
    public const string LAYER_STEP = "Step";
}
